--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
 </head>
 <body>
   <p id="text">JavaScript is so cool. It lets me add text to my page programmatically.</p>
-  <script type="text/javascript" src="index.js"></script>
+  <script type="text/javascript" src="index.js">
+      document.getElementById('text').innerHTML = "This is really cool!";
+
+  </script>
 </body>
 </html>
